--- a/Ex2.4/Ex2.4.vcxproj
+++ b/Ex2.4/Ex2.4.vcxproj
@@ -123,7 +123,7 @@
     <ClInclude Include="glut.h" />
     <ClInclude Include="MenuFunc.h" />
     <ClInclude Include="MouseFunc.h" />
-    <ClInclude Include="MyFunc.h" />
+    <ClInclude Include="MyMainFunc.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
