--- a/Ex2.4/Ex2.4.vcxproj.filters
+++ b/Ex2.4/Ex2.4.vcxproj.filters
@@ -32,10 +32,10 @@
     <ClInclude Include="MouseFunc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MyFunc.h">
+    <ClInclude Include="CoordinateXY.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CoordinateXY.h">
+    <ClInclude Include="MyMainFunc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
